<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.StartActivity"
    android:background="@drawable/brooke"
    >


    <Button
        android:id="@+id/srt_skp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/sofiaprolight"
        android:text="Skip"
        android:textColor="@color/orange"
        android:textSize="10sp"
        android:textStyle="bold"
        app:cornerRadius="27.5sp"
        app:strokeColor="#60292828"
        app:strokeWidth="0.5dp"
        />

    <ImageView
        android:id="@+id/back_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle4168" />

    <TextView
        android:id="@+id/welc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/sofiaprolight"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        />
    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WAGABAT"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:fontFamily="@font/sofiaprolight"
        android:layout_below="@+id/welc"
        android:layout_marginTop="5sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        />

    <TextView
        android:id="@+id/ur_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food"
        android:layout_marginTop="5sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/sofiaprolight"
        android:text="@string/your_favourite_foods_delivered_nfast_at_your_door"
        android:textColor="@color/blue_black"
        android:textSize="15sp"
        android:textStyle="bold" />



    <ImageView
        android:id="@+id/line1"
        android:layout_width="70dp"
        android:layout_height="1sp"
        android:layout_below="@+id/welc"
        android:layout_alignStart="@+id/btn_sin"
        android:layout_marginTop="210dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50sp"
        android:background="@drawable/line2"
        />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="70dp"
        android:layout_height="1dp"
        android:layout_below="@+id/welc"
        android:layout_alignEnd="@+id/btn_sin"
        android:layout_marginTop="210dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50sp"
        android:layout_marginStart="50sp"
        android:background="@drawable/line2"
        />

    <TextView
        android:id="@+id/btn_sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welc"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/sofiaprolight"
        android:text="@string/sign_in_with"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/lgbtn_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40sp"
        android:fontFamily="@font/sofiaprolight"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:foregroundGravity="center"
        />


    <Button
        android:id="@+id/btn_go"
        android:layout_width="110sp"
        android:layout_height="60sp"
        android:layout_alignTop="@+id/line2"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35sp"
        android:fontFamily="@font/sofiaprolight"
        android:text="@string/google"
        android:textColor="@color/blue_black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:cornerRadius="27.5sp"
        android:backgroundTint="@color/white"
        android:padding="6sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        app:icon="@drawable/go_ic"
        app:iconPadding="8sp"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="screen"
        android:onClick="btn_gogl"
        />




    <Button
        android:id="@+id/start_w"
        android:layout_width="270sp"
        android:layout_height="70sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/op_white"
        android:fontFamily="@font/sofiaprolight"
        android:text="@string/start_with_email_or_phone"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/btn_sin"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        app:cornerRadius="35sp"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="0.8dp"
        android:textAllCaps="false"
        />



    <TextView
        android:id="@+id/txt_alr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginBottom="60sp"
        android:layout_below="@+id/start_w"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/sofiaprolight"
        android:textColor="@color/white"
        android:textSize="15sp"

        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_w"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:fontFamily="@font/sofiaprolight"
        android:text="@string/sign"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />








</RelativeLayout>



